# mover

./: Cargo.toml  LICENSE.md
src/: cli.rs  config.rs  lib.rs  main.rs
src/cli/: command.rs
src/cli/command/: ls.rs  mv.rs
src/cli/command/ls/: tests.rs
src/config/: tests.rs
testdata/config/: config.json  configInvalid.json  configInvalidURL.json
testdata/txt/: example.txt  example2.txt
