[package]
name = "mover"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Mover moves files and directories to configured locations, e.g., on your local machine, a remote machine, or AWS."
readme = "README.md"
repository = "https://github.com/davidrhp/mover"
keywords = ["cli", "aws"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
