[package]
name = "mover"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Mover moves files and directories to configured locations, e.g., on your local machine, a remote machine, or AWS."
readme = "README.md"
repository = "https://github.com/davidrhp/mover"
keywords = ["cli", "aws"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.12", features = ["derive"] }
clap-verbosity-flag = "1.0.1"
clap_mangen = "0.1.10"
indicatif = "0.16.2"
ansi_term = "0.12.1"
human-panic = "1.0.3"
log = "0.4.17"
env_logger = "0.9.0"
home = "0.5.3"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
url = { version = "2.2.2", features = ["serde"] }
anyhow = "1.0.58"
