[package]
name = "mover"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Mover moves files and directories to configured locations, e.g., on your local machine, a remote machine, or AWS."
readme = "README.md"
repository = "https://github.com/davidrhp/mover"
keywords = ["cli", "aws"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.12", features = ["derive"] } # cli framework
clap-verbosity-flag = "1.0.1" # automatically generate verbosity flag
clap_mangen = "0.1.10" # generate man page
indicatif = "0.16.2" # status indicators
ansi_term = "0.12.1" # color output
human-panic = "1.0.3" # readable panics
log = "0.4.17" # logging facade
env_logger = "0.9.0" # logging impl
home = "0.5.3" # find home dir
lazy_static = "1.4.0" # have consts that are evaluated at runtime
serde = { version = "1.0", features = ["derive"] } # serializer/deserializer
serde_json = "1.0.82" # to handle json files
url = { version = "2.2.2", features = ["serde"] }
anyhow = "1.0.58" # application focues errors

[dev-dependencies]
assert_fs = "1.0.7" # file system asserts and utilities
